--- a/app.json
+++ b/app.json
@@ -7,6 +7,10 @@
       "android",
       "web"
     ],
+    "androidStatusBar": {
+      "backgroundColor": "#24292e",
+      "translucent": false
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
