--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-web": "~0.11.7",
-    "styled": "^1.0.0"
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
