--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/bottom-tabs": "^5.2.6",
     "@react-navigation/native": "^5.1.5",
+    "@react-navigation/stack": "^5.2.10",
     "axios": "^0.19.2",
     "components": "^0.1.0",
     "expo": "~37.0.3",
